--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,31 @@
 
 	<properties>
 		<java.version>1.8</java.version>
+		<thucydides.version>1.8.4</thucydides.version>
+		<jetty.port>9090</jetty.port>
+		<jetty.stop.port>9999</jetty.stop.port>
+		<surefire.version>2.17</surefire.version>
 	</properties>
+	
+	<distributionManagement>
+		<repository>
+			<id>release</id>
+			<name>releases</name>
+			<url>http://localhost:8081/artifactory/libs-release-local</url>
+		</repository>
+		<snapshotRepository>
+			<id>snapshot</id>
+			<name>snapshots</name>
+			<url>http://localhost:8081/artifactory/libs-snapshot-local</url>
+		</snapshotRepository>
+	</distributionManagement>
+
+	<scm>
+		<connection>scm:git:git@github.com:Debraj68/my-testrepo.git</connection>
+		<developerConnection>scm:git:git@github.com:Debraj68/my-testrepo.git</developerConnection>
+		<url>git@github.com:Debraj68/my-testrepo.git</url>
+		<tag>v0.0.1</tag>
+	</scm>
 
 	<dependencies>
 		<dependency>
@@ -85,7 +109,54 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			
+				<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>0.8.6</version>
+				<executions>
+					<execution>
+						<id>default-prepare-agent</id>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>default-report</id>
+						<goals>
+							<goal>report</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>default-check</id>
+						<goals>
+							<goal>check</goal>
+						</goals>
+						<configuration>
+							<rules>
+								<rule>
+									<element>BUNDLE</element>
+									<limits>
+										<limit>
+											<counter>COMPLEXITY</counter>
+											<value>COVEREDRATIO</value>
+											<minimum>0.20</minimum>
+										</limit>
+									</limits>
+								</rule>
+							</rules>
+						</configuration>
+					</execution>
+				</executions>
+				<configuration>
+					<excludes>
+						<exclude>com/eldisol/jacoboot/JacobootApplication.class</exclude>
+					</excludes>
+				</configuration>
+			</plugin>
 		</plugins>
+		
 	</build>
+
 
 </project>
