added changes in jenkinsfile

--- a/deployment/Jenkinsfile
+++ b/deployment/Jenkinsfile
@@ -63,13 +63,13 @@ bat(/"${mvnHome}\bin\mvn" sonar:sonar/)
 
 stage('Deploy') {
 
-sh 'curl -u jenkins:jenkins -T target/**.war "http://localhost:5050/manager/text/deploy?path=/ibmdevops&update=true"'
+sh 'curl -u jenkins:jenkins -T target/**.war "http://localhost:5050/manager/text/deploy?path=/ibmdevops1&update=true"'
 
 }
 
 stage("Smoke Test"){
 
-sh "curl --retry-delay 10 --retry 5 http://localhost:5050/ibmdevops/api/v1/products"
+sh "curl --retry-delay 10 --retry 5 http://localhost:5050/ibmdevops1"
 
 }
 
