--- a/deployment/Jenkinsfile
+++ b/deployment/Jenkinsfile
@@ -69,7 +69,7 @@ sh 'curl -u jenkins:jenkins -T target/**.war "http://localhost:5050/manager/text
 
 stage("Smoke Test"){
 
-sh "curl --retry-delay 10 --retry 5 http://localhost:5050/ibmdevops1"
+sh "curl --retry-delay 10 --retry 5 http://localhost:5050/ibmdevops1/api/v1/home"
 
 }
 
