--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.datasource.password=root
 spring.jpa.properties.hibernate.format_sql=true
 
 server.port=8096
+
+server.servlet.context-path=/home
