--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,5 @@ spring.jpa.properties.hibernate.format_sql=true
 
 server.port=8096
 
-server.servlet.context-path=/home
+logging.level.web=debug
+logging.level.root=debug
