--- a/deployment/Jenkinsfile
+++ b/deployment/Jenkinsfile
@@ -75,5 +75,14 @@ sh "curl --retry-delay 10 --retry 5 http://localhost:5050/ibmdevops1/home"
 
 }
 
-
+ stage('Publish') {
+      def server = Artifactory.server 'Artifactory'
+      def rtMaven = Artifactory.newMavenBuild()
+      rtMaven.tool = 'mvn'
+      rtMaven.resolver server: server, releaseRepo: 'libs-release', snapshotRepo: 'libs-snapshot'
+      rtMaven.deployer server: server, releaseRepo: 'libs-release-local', snapshotRepo: 'libs-snapshot-local'
+      def buildInfo = rtMaven.run pom: 'pom.xml', goals: 'install'
+      server.publishBuildInfo buildInfo
+}
+}
 
